# intro_docker

./: pyproject.toml
afficher_pandas/: Dockerfile  afficher.py
api_exemple/: main.py  test_api_exemple.py
exercice_2_api_liste/: .dockerignore  Dockerfile  main.py
exercice_3/: .dockerignore  Dockerfile  compose.yaml  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py  test_crud_functions.py
hello_world/: Dockerfile
python_docker/: Dockerfile  blague.py
